--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
     </header>
 
     <!-- banner -->
-    <section class="banner">
+    <section class="about">
       <div class="container">
-        <div class="banner_wrapper">
+        <div class="about_wrapper">
           <div class="about_banner_text">
             <p>Things you need to know</p>
             <h1>About Me</h1>
