--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
     </header>
 
     <!-- banner -->
-    <section class="banner">
+    <section class="servicebanner">
         <div class="banner_wrapper">
           <div class="service_wrapper">         
              <div class="services_banner_text">
