--- a/updates.html
+++ b/updates.html
@@ -1,11 +1,240 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is the official website of Creative Visual Design"
+    />
+
+    <title>Creative Visual Design</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./img/img/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!-- header-->
+    <header class="header">
+      <div class="container">
+        <div class="header_wrapper">
+          <div class="header_logo">
+            <img src="./img/img/Brand.png" alt="This is logo" />
+            <h5>Creative <span>Visual</span> Design</h5>
+          </div>
+          <nav class="header_nav">
+            <ul>
+              <li><a href="./home.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./services.html">Services</a></li>
+              <li><a href="./updates.html">Updates</a></li>
+              <li><a href="./contacts.html">Contacts</a></li>
+            </ul>
+          </nav>
+          <div class="toggle_menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- body starts here -->
+    <section class="update">
+      <div class="container">
+        <div class="title">
+          <h2>Lastest Trends</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="update_wrapper">
+          <div class="update_left">
+            <div class="top_design_concept">
+              <div class="updates_img">
+                <img src="./img/img/update1.png" alt="update-img" />
+              </div>
+
+              <ul class="updates_social">
+                <li>
+                  <a href=""><i class="fa-solid fa-person"></i></a>
+                </li>
+                <li><p>Roy Balajadia</p></li>
+                <li>
+                  <a href=""><i class="fa-regular fa-calendar"></i></a>
+                </li>
+                <li>
+                  <p>March 21, 2022</p>
+                </li>
+                <li>
+                  <a href=""><i class="fa-solid fa-tag"></i></a>
+                </li>
+                <li>
+                  <p>Web Design | Wire Frame</p>
+                </li>
+              </ul>
+
+              <h5>Designing Concept</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                doloremque animi ducimus veniam excepturi, nihil mollitia
+                voluptates ipsum in. Asperiores minima mollitia distinctio omnis
+                tempore voluptatibus. Atque enim dolore debitis!
+              </p>
+
+              <a class="update-no-bg-btn" href="#">Read more ...</a>
+            </div>
+
+            <div class="bottom_design_concept">
+              <div class="updates_img">
+                <img src="./img/img/update2.png" alt="update-img" />
+              </div>
+
+              <ul class="updates_social">
+                <li>
+                  <a href=""><i class="fa-solid fa-person"></i></a>
+                </li>
+                <li><p>Roy Balajadia</p></li>
+                <li>
+                  <a href=""><i class="fa-regular fa-calendar"></i></a>
+                </li>
+                <li>
+                  <p>March 21, 2022</p>
+                </li>
+                <li>
+                  <a href=""><i class="fa-solid fa-tag"></i></a>
+                </li>
+                <li>
+                  <p>Web Development</p>
+                </li>
+              </ul>
+
+              <h5>Design to Code</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                doloremque animi ducimus veniam excepturi, nihil mollitia
+                voluptates ipsum in. Asperiores minima mollitia distinctio omnis
+                tempore voluptatibus. Atque enim dolore debitis!
+              </p>
+
+              <a class="no-bg-btn" href="#">Read more ...</a>
+            </div>
+
+            <!-- End of Left Column -->
+          </div>
+          <div class="update_right">
+            <div class="Categories">
+              <h5>Categories</h5>
+              <table>
+                <tr>
+                  <td>Web Design</td>
+                  <td>(2)</td>
+                </tr>
+                <tr>
+                  <td>Web Development</td>
+                  <td>(3)</td>
+                </tr>
+                <tr>
+                  <td>Wire Frame</td>
+                  <td>(1)</td>
+                </tr>
+                <tr>
+                  <td>Vector & Logo</td>
+                  <td>(5)</td>
+                </tr>
+                <tr>
+                  <td>Social Media</td>
+                  <td>(2)</td>
+                </tr>
+              </table>
+            </div>
+            <div class="recent_post">
+              <h5>Recent Post</h5>
+              <div class="recent_item">
+                <div class="recent__img">
+                  <img src="./img/img/recent-1.png" alt="update-img" />
+                </div>
+                <div class="recent__txt">
+                  <h6>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <p>March 21, 2022</p>
+                </div>
+              </div>
+              <div class="recent_item">
+                <div class="recent__img">
+                  <img src="./img/img/recent-2.png" alt="update-img" />
+                </div>
+                <div class="recent__txt">
+                  <h6>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <p>March 21, 2022</p>
+                </div>
+              </div>
+              <div class="recent_item">
+                <div class="recent__img">
+                  <img src="./img/img/recent-3.png" alt="update-img" />
+                </div>
+                <div class="recent__txt">
+                  <h6>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <p>March 21, 2022</p>
+                </div>
+              </div>
+            </div>
+            <div class="tags">
+              <h5>Tags</h5>
+              <a class="btn bg--light" href="#">WEB DESIGN</a>
+              <a class="btn bg--light" href="#">WIRE FRAME</a>
+              <a class="btn bg--dark" href="#">WEB DEVELOPMENT</a>
+              <a class="btn bg--light" href="#">LOGO</a>
+              <a class="btn bg--light" href="#">VECTOR</a>
+              <a class="btn bg--light" href="#">SOCIAL MEDIA</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- cta -->
+    <section class="cta">
+      <div class="container">
+        <div class="cta_info">
+          <h3>Feel free to talk to us about your project</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          <a class="btn bg--dark" href="#">CONTACT US</a>
+        </div>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer_wrapper">
+          <ul class="footer_social">
+            <li>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-solid fa-envelope"></i></a>
+            </li>
+          </ul>
+          <p>Brgy. San Ignacia San Pablo City, Laguna</p>
+          <p>©CREATIVEDESIGN2026</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
