--- a/about.html
+++ b/about.html
@@ -34,6 +34,11 @@
               <li><a href="./contacts.html">Contacts</a></li>
             </ul>
           </nav>
+          <div class="toggle_menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -197,5 +202,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
